--- a/org/unicode/data/gen/charts/nameslist/charts.css
+++ b/org/unicode/data/gen/charts/nameslist/charts.css
@@ -1,5 +1,16 @@
-td			{ border: 1 solid #0000FF; color: #000000; background-color: #FFFFFF; 
-            font-size: 120%; text-align: Center; vertical-align: top; width: 48px }
+table       { border-spacing: 0; border-collapse: collapse;
+                    border-style: solid; border-color: black; border-width: 1px;                    }
+th, td      { border-spacing: 0; 
+                border-style: solid; border-color: teal; border-width: 1px;
+                    color: black; vertical-align: top; }
+td          { font-size: 120%; text-align: Center; vertical-align: top; width: 48px }
+
+headerTable { font-size: 120%;  border-width: 0px; border-color: white}
+headerLeft {text-align: left; font-size: 120%; border-width: 0px; border-color: white}
+headerCenter {text-align: center; font-size: 120%;  border-width: 0px; border-color: white}
+headerRight {text-align: right; font-size: 120%;  border-width: 0px;  border-color: white}
+chart {background-color: red;}
+
 td.p		{ color: #000000; background-color: #7777FF }
 td.s		{ color: #000000; background-color: #BBBBFF }
 td.t		{ color: #000000; background-color: #DDDDFF }
@@ -20,9 +31,5 @@ td.n		{ font-size: 120%; text-align: Center; width: 72px; color: #000000; backgr
 td.z		{ font-size: 120%; text-align: Center; width: 72px; font-weight: bold; background-color: #EEEEEE; }
 td.h		{ font-size: 120%; text-align: Left; color: #000000; background-color: #EEEEEE; } 
 
-headerTable { width: 100%; font-size: 120%;  }
-headerLeft {text-align: left; font-size: 120%; background-color: red;}
-headerCenter {text-align: center; font-size: 120%; }
-headerRight {text-align: right; font-size: 120%; }
-chart {background-color: red;}
+
 
