*** empty log message ***
git-svn-id: https://unicode.org/repos/unicodetools/trunk@250 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/jsp/index.css
+++ b/jsp/index.css
@@ -3,3 +3,4 @@ table		{ border-collapse: collapse }
 th           { background-color: #EEEEFF }
 textarea	{width: 100%; background-color: #EEFFEE; border:1px solid #CCFFCC; }
 li,p           { margin-top: 0.5em; margin-bottom: 0.5em }
+h2 { font-size:120%;  margin-top: 0.5em; margin-bottom: 0.5em }
