--- a/jsp/index.css
+++ b/jsp/index.css
@@ -6,3 +6,8 @@ li,p           { margin-top: 0.5em; margin-bottom: 0.5em }
 h2 { font-size:120%;  margin-top: 0.5em; margin-bottom: 0.5em }
 .key { background-color: #FF9999; font-weight: bold }
 span.break   { border-right: 1px solid red;}
+.c { text-align:center; }
+.cn { text-align:center; white-space:nowrap;}
+.x { color: red; font-weight: bold; font-size:120% }
+.q { color: blue;}
+.esc { color: gray;}
