--- a/jsp/index.css
+++ b/jsp/index.css
@@ -4,10 +4,11 @@ th           { background-color: #EEEEFF; text-align:left }
 textarea	{width: 100%; background-color: #EEFFEE; border:1px solid #CCFFCC; }
 li,p           { margin-top: 0.5em; margin-bottom: 0.5em }
 h2 { font-size:120%;  margin-top: 0.5em; margin-bottom: 0.5em }
-.key { background-color: #FF9999; font-weight: bold }
+.key { background-color: #FFFF99; font-weight: bold; color: red }
 span.break   { border-right: 1px solid red;}
 .c { text-align:center; }
 .bcell { text-align:center; width: 3em }
+.bxcell { text-align:center; width: 3em; background-color: #CCCCCC; }
 .bccell { text-align:center; font-size: 150%}
 .cn { text-align:center; white-space:nowrap;}
 .x { color: red; font-weight: bold; font-size:120% }
