--- a/org/unicode/jsp/index.css
+++ b/org/unicode/jsp/index.css
@@ -25,3 +25,4 @@ h3 {background-color: #EEEEEE}
 .L2 {background-color: #BBBBBB}
 .L1 {background-color: #AAAAAA}
 .L0 {background-color: #999999} 
+.default           { background-color: #999999}
