--- a/org/unicode/jsp/index.css
+++ b/org/unicode/jsp/index.css
@@ -43,3 +43,4 @@ h3 {background-color: #EEEEEE}
 .smn {font-size:50%; border:1px solid #CCCCFF;border-top-width:0;}
 .smb {background-color: #F8F8F8}
 .chb {background-color: #DDFFDD}
+.ri {float:right; display: inline-block;}
