--- a/org/unicode/jsp/index.css
+++ b/org/unicode/jsp/index.css
@@ -44,4 +44,4 @@ h3 {background-color: #EEEEEE}
 .smb {background-color: #F8F8F8}
 .chb {background-color: #DDFFDD}
 .ri {float:right; display: inline-block;}
-.error {color:#FF0000}
+.error {background-color:#FF6666}
