git-svn-id: https://unicode.org/repos/unicodetools/trunk@849 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/UnicodeJsps/WebContent/index.css
+++ b/UnicodeJsps/WebContent/index.css
@@ -1,4 +1,4 @@
-body {font-family: Georgia, "Times New Roman", Times, Symbola, Aegyptus, Code2000,  Code2001,  Code2002, Musica, serif}
+body {font-family: Georgia, "Apple Color Emoji", "Segoe UI Emoji", "Times New Roman", Times, Symbola, Aegyptus, Code2000,  Code2001,  Code2002, Musica, serif}
 td,th,table			{ padding:1px; border:1px solid #F3F3FF; vertical-align:top }
 table		{ border-collapse: collapse }
 th           { background-color: #EEEEFF; text-align:left }
