add proper headings to candidates page
git-svn-id: https://unicode.org/repos/unicodetools/trunk@993 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/unicodetools/org/unicode/tools/emoji/emoji-list.css
+++ b/unicodetools/org/unicode/tools/emoji/emoji-list.css
@@ -12,9 +12,15 @@ th {
 	text-align: left;
 	background-color: #EEE;
 }
+
 .bighead {
 	background-color: #DDD;
 	font-size: 125%;
+}
+
+.bighead2 {
+	background-color: #FCC;
+	font-size: 150%;
 }
 
 .code {
