update to emoji charts
git-svn-id: https://unicode.org/repos/unicodetools/trunk@1052 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/unicodetools/org/unicode/tools/emoji/emoji-list.css
+++ b/unicodetools/org/unicode/tools/emoji/emoji-list.css
@@ -11,15 +11,19 @@ td, th {
 th {
 	text-align: left;
 	background-color: #EEE;
+	padding-top: 0.5em;
+	padding-bottom: 0.5em;
 }
 
 .bighead {
 	background-color: #DDD;
-	font-size: 125%;
+	font-size: 120%;
+	padding-top: 1em;
+	padding-bottom: 1em;
 }
 
 .bighead2 {
-	background-color: #FCC;
+	background-color: #CCC;
 	font-size: 150%;
 }
 
@@ -210,5 +214,6 @@ H1 {
     FONT-SIZE: 150%;
 }
 H2 {
-    FONT-SIZE: 120%;
+    FONT-SIZE: 125%;
+    margin-top:2em;
 }
