git-svn-id: https://unicode.org/repos/unicodetools/trunk@1149 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/unicodetools/org/unicode/tools/emoji/emoji-list.css
+++ b/unicodetools/org/unicode/tools/emoji/emoji-list.css
@@ -1,4 +1,5 @@
 table {
+	clear: both;
 	border-collapse: collapse;
 	border: silver solid 1px;
 }
@@ -6,6 +7,7 @@ table {
 td, th {
 	border: silver solid 1px;
 	vertical-align: top;
+	font-size: 90%;
 }
 
 th {
@@ -161,10 +163,19 @@ body {
 }
 
 .aacButton {
-	height: 110;
-	width: 95;
+	border: silver solid 1px;
+	height: auto;
+	width: auto;
+	text-align: center;
     float: right;
     margin: 0.5em 0 1em 1em;
+}
+
+.aacImage {
+    margin-left: auto;
+    margin-right: auto;
+	height: auto;
+	width: auto;
 }
 
 A.bar {
@@ -198,6 +209,7 @@ A.bar:active, A.bar:hover {
 }
 .main {
 	margin:1em;
+	font-size: 90%;
 }
 .logo {
 	border-style: none;
