--- a/unicodetools/org/unicode/tools/emoji/emoji-list.css
+++ b/unicodetools/org/unicode/tools/emoji/emoji-list.css
@@ -1,7 +1,39 @@
 .main {
 	margin:2em;
-	font-size: 90%;
+	font-family: Arial, Geneva, Helvetica, sans-serif;
 }
+
+.noborder {
+	border: silver none 0px;
+	border-collapse: collapse;
+}
+
+.nav-bar {
+	float: left;
+    margin: 0 0 0 0;
+	border: silver none 0px;
+}
+
+.navColPlus {
+	width: 25%
+	border: silver none 0px;
+	padding: 1em;
+}
+
+.navColTablePlus {
+	border: silver none 0px;
+	margin: 4px;
+}
+
+.navColTitlePlus {
+	border: silver none 0px;
+	padding: 1em;
+}
+.navColCellPlus {
+	border: silver none 0px;
+	padding: 0.2em;
+}
+
 table {
 	clear: both;
 	border-collapse: collapse;
@@ -11,14 +43,13 @@ table {
 td, th {
 	border: silver solid 1px;
 	vertical-align: top;
-	font-size: 90%;
 }
 
 th {
 	text-align: left;
 	background-color: #EEE;
-	padding-top: 0.5em;
-	padding-bottom: 0.5em;
+	padding-top: 0.3em;
+	padding-bottom: 0.3em;
 }
 
 .bighead {
