clean up emoji names
git-svn-id: https://unicode.org/repos/unicodetools/trunk@1154 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/unicodetools/org/unicode/tools/emoji/emoji-list.css
+++ b/unicodetools/org/unicode/tools/emoji/emoji-list.css
@@ -203,7 +203,8 @@ body {
 	width: auto;
 	text-align: center;
     float: right;
-    margin: 0.5em 0 1em 1em;
+    margin: 0 0 1em 1em;
+    padding: 0.5em 0 0 0;
 }
 
 .aacImage {
