--- a/unicodetools/org/unicode/tools/emoji/emoji-list.css
+++ b/unicodetools/org/unicode/tools/emoji/emoji-list.css
@@ -170,6 +170,10 @@ vertical-align: text-bottom;
 	text-align: right;
 }
 
+.center {
+	text-align: center;
+}
+
 .chars, .charsSmall {
 	text-decoration: none;
 	color: #ccc;
