tweak the charts as per ESC discussions
git-svn-id: https://unicode.org/repos/unicodetools/trunk@1252 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/unicodetools/org/unicode/tools/emoji/emoji-list.css
+++ b/unicodetools/org/unicode/tools/emoji/emoji-list.css
@@ -277,10 +277,14 @@ H2 {
 }
 
 .new {
-	background-color: #ffc;
-	border: 2px solid red;
+	border-radius: 5px;
+	border: 2px ridge green;
 }
 
 .indent {
     margin: 1em 1em 1em 1em;
+}
+
+.nomod {
+    color:gray;
 }
