git-svn-id: https://unicode.org/repos/unicodetools/trunk@1323 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/unicodetools/org/unicode/tools/emoji/emoji-list.css
+++ b/unicodetools/org/unicode/tools/emoji/emoji-list.css
@@ -296,3 +296,20 @@ H2 {
 .keye {
     /* color:gray; */
 }
+.uname {
+	font-size:75%;
+	margin:0.1em 1em 0.1em 1em;
+	font-style: italic;
+}
+.xxx:before {
+	content: "❌   ";
+}
+.member:before {
+	content: "∈ ";
+	font-style: bold;
+}
+.greater:before {
+	content: "> ";
+	font-style: bold;
+}
+
