--- a/unicodetools/org/unicode/tools/emoji/emoji-list.css
+++ b/unicodetools/org/unicode/tools/emoji/emoji-list.css
@@ -43,12 +43,12 @@ table {
 td, th {
 	border: silver solid 1px;
 	vertical-align: top;
+	padding: 0.4em;
 }
 
 th {
 	text-align: left;
 	background-color: #EEE;
-	padding: 0.2em;
 }
 
 .mediumhead {
@@ -313,3 +313,7 @@ H2 {
 	font-style: bold;
 }
 
+.nowrap {
+	white-space: nowrap;
+}
+}
