git-svn-id: https://unicode.org/repos/unicodetools/trunk@1343 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/unicodetools/org/unicode/tools/emoji/emoji-list.css
+++ b/unicodetools/org/unicode/tools/emoji/emoji-list.css
@@ -15,7 +15,7 @@
 }
 
 .navColPlus {
-	width: 25%
+	width: 25%;
 	border: silver none 0px;
 	padding: 1em;
 }
@@ -306,14 +306,13 @@ H2 {
 }
 .member:before {
 	content: "∈ ";
-	font-style: bold;
+	font-weight: bold;
 }
 .greater:before {
 	content: "> ";
-	font-style: bold;
+	font-weight: bold;
 }
 
 .nowrap {
 	white-space: nowrap;
-}
 }
