Added Unicode Names to recently added charts, some cleanup.
git-svn-id: https://unicode.org/repos/unicodetools/trunk@1442 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/unicodetools/org/unicode/tools/emoji/emoji-list.css
+++ b/unicodetools/org/unicode/tools/emoji/emoji-list.css
@@ -298,11 +298,15 @@ H2 {
     /* color:gray; */
 }
 .uname {
-	font-size:75%;
+	font-size:50%;
 	margin:0.1em 1em 0.1em 1em;
 	font-style: italic;
 }
-.xxx:before {
+.uname::before {
+	content: "UN: ";
+}
+
+.xxx::before {
 	content: "❌   ";
 }
 .member:before {
