git-svn-id: https://unicode.org/repos/unicodetools/trunk@1461 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/unicodetools/org/unicode/tools/emoji/emoji-list.css
+++ b/unicodetools/org/unicode/tools/emoji/emoji-list.css
@@ -305,6 +305,14 @@ H2 {
 .uname::before {
 	content: "🅄 ";
 }
+.comment {
+	font-size:75%;
+	margin:0.1em 1em 0.1em 1em;
+}
+/* .comment::before {
+	content: "➯ ";
+}
+*/
 
 .xxx::before {
 	content: "❌   ";
