--- a/UnicodeJsps/.settings/org.eclipse.wst.common.component
+++ b/UnicodeJsps/.settings/org.eclipse.wst.common.component
@@ -1,9 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
+        
     <wb-module deploy-name="UnicodeJsps">
+                
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
+                
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+        <dependent-module archiveName="unicodetools-1.0.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/unicodetools/unicodetools">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+                
         <property name="context-root" value="UnicodeJsps"/>
+                
         <property name="java-output-path" value="/UnicodeJsps/target/classes"/>
+            
     </wb-module>
+    
 </project-modules>
