--- a/unicodetools/src/main/resources/org/unicode/tools/emoji/emoji-list.css
+++ b/unicodetools/src/main/resources/org/unicode/tools/emoji/emoji-list.css
@@ -253,21 +253,15 @@ A.bar {
 	FONT-SIZE: 100%;
 	margin-left: 0.5em;
 }
-A.bar:link, A.bar:visited {
-	FONT-SIZE: 90%; COLOR: #fffffe
-}
-A.bar:active, A.bar:hover {
-	FONT-SIZE: 90%; COLOR: #ff3333
-}
 
 .icon {
 	padding: 0px;
 	margin: 0px; 
 	FONT-WEIGHT : bold;
 	FONT-SIZE: 110%;
-	COLOR: #fffffe;
+	COLOR: white;
 	FONT-FAMILY: Arial, Geneva, sans-serif;
-	BACKGROUND-COLOR: #990000;
+	BACKGROUND-COLOR: #5555FF;
 	TEXT-ALIGN: left;
 	FONT-WEIGHT: bold;
 }
@@ -275,8 +269,8 @@ A.bar:active, A.bar:hover {
 	padding: 0;
 	margin: 0;
 	FONT-SIZE: 50%;
-	COLOR: #fffffe;
-	BACKGROUND-COLOR: #999999;
+	COLOR: white;
+	BACKGROUND-COLOR: #EAEAFE;
 }
 .logo {
 	border-style: none;
